new files updated

--- a/file_compare/Untitled.ipynb
+++ b/file_compare/Untitled.ipynb
@@ -73,7 +73,18 @@
     "df2['point_amount'] = df2['point_amount'].apply(lambda x: str(\"{:.2f}\".format(float(x))))\n",
     "\n",
     "df1.set_index('point_transaction_id', inplace=True)\n",
-    "df2.set_index('point_transaction_id', inplace=True)"
+    "df2.set_index('point_transaction_id', inplace=True)\n",
+    "\n",
+    "count = 0\n",
+    "for row in df1.iterrows():\n",
+    "    id = row[0]\n",
+    "    r1 = row[1]\n",
+    "    r2 = df2.loc[id]\n",
+    "    temp = [i for i in r1.index if r1[i]!=r2[i]]\n",
+    "    if len(temp)==0:\n",
+    "        continue\n",
+    "    else:\n",
+    "        print(id, temp)"
    ]
   },
   {
