--- a/file_compare/Untitled.ipynb
+++ b/file_compare/Untitled.ipynb
@@ -3,13 +3,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df1 = pd.read_csv('td_file.csv', index_col='ID')\n",
-    "df2 = pd.read_csv('sf_file.csv', index_col='ID')\n",
+    "df1 = pd.read_csv('data/td_file.csv')\n",
+    "df2 = pd.read_csv('data/sf_file.csv')\n",
     "\n",
     "def fix_datetime(val):\n",
     "    if isinstance(val, str) and val[-4:]=='.000':\n",
@@ -20,13 +22,24 @@
     "df2 = df2.fillna('[NULL]')\n",
     "# fix datetime where remove the last 4 chars .000\n",
     "df2 = df2.applymap(fix_datetime)\n",
+    "\n",
+    "# drop columns\n",
+    "df1 = df1.drop(['ACCOUNT_KEY'], axis = 1) \n",
+    "df2 = df2.drop(['ACCOUNT_KEY'], axis = 1)\n",
+    "\n",
+    "\n",
     "# fix the partition_id column include , in integer value\n",
-    "df2['partition_id'] = df2['partition_id'].apply(lambda x: format(x, \",\"))\n",
+    "df2['MERCHANT_KEY'] = df2['MERCHANT_KEY'].apply(lambda x: format(x, \",\"))\n",
+    "df2['LOAD_KEY'] = df2['LOAD_KEY'].apply(lambda x: format(x, \",\"))\n",
+    "\n",
+    "df1.set_index('MERCHANT_KEY', inplace=True)\n",
+    "df2.set_index('MERCHANT_KEY', inplace=True)\n",
+    "\n",
     "# fix priority column convert float to int\n",
-    "df2['priority'] = df2['priority'].astype(str)\n",
-    "df2['priority'] = df2['priority'].replace('[NULL]','11111.0')\n",
-    "df2['priority'] = df2['priority'].astype(float).astype(int).astype(str)\n",
-    "df2['priority'] = df2['priority'].replace('11111','[NULL]')\n",
+    "# df2['priority'] = df2['priority'].astype(str)\n",
+    "# df2['priority'] = df2['priority'].replace('[NULL]','11111.0')\n",
+    "# df2['priority'] = df2['priority'].astype(float).astype(int).astype(str)\n",
+    "# df2['priority'] = df2['priority'].replace('11111','[NULL]')\n",
     "\n",
     "count = 0\n",
     "for row in df1.iterrows():\n",
@@ -37,6 +50,8 @@
     "    if len(temp)==0:\n",
     "        continue\n",
     "    else:\n",
+    "        print(r1)\n",
+    "        print(r2)\n",
     "        print(id, temp)"
    ]
   },
@@ -189,6 +204,31 @@
     "temp_df['B'] = temp_df['B'].apply(lambda x: str(\"{:.2f}\".format(float(x))))\n",
     "temp_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
